[tool.poetry]
name = "py-web-hw-11"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_11"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = {extras = ["standart"], version = "^0.21.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
